brand section is completed

--- a/src/services/config.json
+++ b/src/services/config.json
@@ -1,4 +1,3 @@
 {
-    "onlineApi":"https://ecomadminapi.azhadev.ir/api",
-    "offlineApi":"https://127.0.0.1:8000/api"
+    "onlinePath":"https://ecomadminapi.azhadev.ir"
 }
